<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Groupenstein</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_manage_groups">Remove Groups</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_full_site">Go To Full Site</string>
    <string name="action_search_text">Search</string>
    <string name="action_refresh_text">Refresh</string>
    <string name="action_home_text">Home</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_administration">AdministrationActivity</string>
    <string name="title_activity_organization_group_view">Organization Groups</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_send_group_message">Send Group Message</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>

</resources>
