<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GroupView">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_home_text" />
    <item
        android:id="@+id/action_manage_groups"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_manage_groups" />
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sign_out" />
    <item
        android:id="@+id/action_full_site"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_full_site" />
</menu>
